<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MentionLegalesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mentionsLegales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/mentions_legales"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/RCS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/RCS"
            app:layout_constraintTop_toBottomOf="@id/mentionsLegales"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/Adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Adresse"
            app:layout_constraintTop_toBottomOf="@id/RCS"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/adress"
            app:layout_constraintTop_toBottomOf="@id/Adresse"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/telephone"
            app:layout_constraintTop_toBottomOf="@id/adress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/telephone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/conditions_generales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Conditions_generales"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/CGU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/CGU"
            app:layout_constraintTop_toBottomOf="@id/conditions_generales"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/services_fournis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/services_fournis"
            app:layout_constraintTop_toBottomOf="@id/CGU"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/sf_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sf_desc"
            app:layout_constraintTop_toBottomOf="@id/services_fournis"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/sf_desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sf_desc_2"
            app:layout_constraintTop_toBottomOf="@id/sf_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/lien_hypertexte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/lien_hypertextes"
            app:layout_constraintTop_toBottomOf="@id/sf_desc2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/propriete_intellectuelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/propriete_intellectuelle"
            app:layout_constraintTop_toBottomOf="@id/lien_hypertexte"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/propriete_intellectuelle_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/propriete_intellectuelle_desc"
            app:layout_constraintTop_toBottomOf="@id/propriete_intellectuelle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/CNIL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/CNIL"
            app:layout_constraintTop_toBottomOf="@id/propriete_intellectuelle_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/CNIL_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/CNIL_desc"
            app:layout_constraintTop_toBottomOf="@id/CNIL"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/litiges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/litiges"
            app:layout_constraintTop_toBottomOf="@id/CNIL_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/litiges_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/litiges_desc"
            app:layout_constraintTop_toBottomOf="@id/litiges"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/donnees_perso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/donnees_perso"
            app:layout_constraintTop_toBottomOf="@id/litiges_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/donnees_perso_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/donnees_perso_desc"
            app:layout_constraintTop_toBottomOf="@id/donnees_perso"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </LinearLayout>


</ScrollView>