<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaisieInformationsClientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="84dp"
            android:hint="@string/nom"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/nom_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            app:layout_constraintTop_toBottomOf="@id/nom_help"
            />

        <TextView
            android:id="@+id/prenom_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/prenom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/identifiant"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/identifiant"
            app:layout_constraintTop_toBottomOf="@id/prenom_help"
            />

        <TextView
            android:id="@+id/identifiant_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/identifiant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/adresse_numero"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/adresse_numero"
            app:layout_constraintTop_toBottomOf="@id/identifiant_help"
            />

        <TextView
            android:id="@+id/adresse_numero_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adresse_numero"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/adresse_code_postal"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/adresse_code_postal"
            app:layout_constraintTop_toBottomOf="@id/adresse_numero_help"
            />

        <TextView
            android:id="@+id/adresse_code_postal_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adresse_code_postal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/adresse_voie"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/adresse_voie"
            app:layout_constraintTop_toBottomOf="@id/adresse_code_postal_help"
            />

        <TextView
            android:id="@+id/adresse_voie_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adresse_voie"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/adresse_ville"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adresse_ville"
            app:layout_constraintTop_toBottomOf="@id/adresse_voie_help"
            />

        <TextView
            android:id="@+id/adresse_ville_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adresse_ville"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/adresse_pays"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adresse_pays"
            app:layout_constraintTop_toBottomOf="@id/adresse_ville_help"
            />

        <TextView
            android:id="@+id/adresse_pays_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adresse_pays"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/mot_de_passe"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            app:layout_constraintTop_toBottomOf="@id/adresse_pays_help"
            />

        <TextView
            android:id="@+id/mot_de_passe_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mot_de_passe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/bouton_valider_modifications"
            android:text="@string/valider"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/mot_de_passe_help"
            app:layout_constraintLeft_toLeftOf="@id/mot_de_passe_help"
            app:layout_constraintRight_toRightOf="@id/mot_de_passe_help"
            android:onClick="onClickValider"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>