<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id = "@+id/identifiant"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:hint="@string/identifiant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mot_de_passe"
            />

        <EditText
            android:id = "@+id/mot_de_passe"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:inputType = "textPassword"
            android:hint="@string/mot_de_passe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/identifiant"
            />

        <Button
            android:id="@+id/connexion"
            android:text="@string/connexion"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/mot_de_passe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="onClickConnexion"
            />

        <TextView
            android:id="@+id/inscription"
            android:text="@string/inscrit_toi"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/connexion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="onClickInscription"
            />
        
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>